--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongodb": "^4.11.0",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-uuid": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
