--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^2.29.3",
     "mongodb": "^4.11.0",
     "next": "13.0.0",
     "react": "18.2.0",
