--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-new-window": "^1.0.1",
     "react-uuid": "^2.0.0"
   },
   "devDependencies": {
