--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^2.0.1",
     "@heroicons/react": "^2.0.13",
     "date-fns": "^2.29.3",
     "mongodb": "^4.11.0",
