--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@heroicons/react": "^2.0.13",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.29.3",
+    "gray-matter": "^4.0.3",
     "mongodb": "^4.11.0",
     "next": "13.0.0",
     "next-auth": "^4.18.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-new-window": "^1.0.1",
-    "react-uuid": "^2.0.0"
+    "react-uuid": "^2.0.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
