--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
