--- a/package.json
+++ b/package.json
@@ -21,8 +21,20 @@
     "react-dom": "18.2.0",
     "react-new-window": "^1.0.1",
     "react-uuid": "^2.0.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-document": "^6.1.0",
+    "rehype-format": "^4.0.1",
+    "rehype-meta": "^3.3.2",
+    "rehype-slug": "^5.1.0",
+    "rehype-stringify": "^9.0.3",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-frontmatter": "^4.0.1",
+    "remark-html": "^15.0.1",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "to-vfile": "^7.2.3",
+    "unified": "^10.1.2",
+    "vfile-reporter": "^7.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
